--- a/css/style.css
+++ b/css/style.css
@@ -7027,11 +7027,11 @@ button.close {
 }
 
 .navbar {
-  transition: background 0.5s;
+  transition: all 0.5s;
 }
 
 .navbar-default {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.9), transparent);
+  background-image: linear-gradient(rgb(0, 0, 0), transparent);
   border: none;
 }
 
@@ -7049,10 +7049,10 @@ button.close {
   position: absolute;
   left: 0;
   right: 0;
-  top: 0;
-  padding-top: 80px;
+  top: 10vh;
   margin: 0 auto;
-  height: 250px;
+  padding-bottom: 50px;
+  height: 200px;
 }
 .header-img .triangles {
   height: 100.2%;
@@ -7099,10 +7099,10 @@ button.close {
   justify-content: space-around;
   height: 100%;
 }
-.hero .content .tekst {
+.hero .content p {
   font-style: italic;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 2.5rem;
 }
 .hero .content img {
   max-width: 400px;
@@ -7147,7 +7147,7 @@ button.close {
     height: 50vh;
   }
   .header-img .logo img {
-    height: 300px;
+    height: 400px;
   }
   .hero .content {
     min-height: 30vh;
